--- a/app/views/configuration/index.haml
+++ b/app/views/configuration/index.haml
@@ -16,6 +16,7 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("configuration/index.css")
 #content-header
   = image_tag("show_settings.png")
   %h1= t('configuration_text')
