--- a/app/views/elective_groups/edit.html.haml
+++ b/app/views/elective_groups/edit.html.haml
@@ -16,15 +16,16 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("elective_groups/index.css")
 #content-header
-  = image_tag("  examination/show_exam.png")
+  = image_tag("examination/show_exam.png")
   %h1= t('batches_text')
   %h3= "#{t('new_elective')}"
   #app-back-button
     = back_button
 #inner-tab-menu
   %ul
-    %li= link_to t('new_text'), new_batch_elective_group_path(@batch)
+    %li= link_to t('new_text'), {:action => :new, :batch_id => @batch.id}
 #page-yield
   - unless flash[:notice].nil?
     %p.flash-msg
@@ -33,12 +34,13 @@
     = link_to t('courses_text'), courses_path
     »
     \#{link_to @course.full_name, @course} »
-    \#{link_to "#{t('batch')} #{@batch.name}", [@course, @batch]} »
-    \#{link_to "#{t('electives')}", batch_elective_groups_path(@batch)} »
+    \#{link_to @batch.name, {:controller => :batches, :action => :show , :course_id => @course.id, :id => @batch.id}} »
+    \#{link_to "#{t('electives')}", {:action => :index, :batch_id => @batch.id}} »
     \#{t('new_text')}
   .box
-    = form_for [@batch, @elective_group] do |f|
-      = f.error_messages :header_message => nil
+    = form_for(@elective_group, :url=> {:action => :update, :batch_id => @batch.id}) do |f|
+      - @elective_group.errors.full_messages.each do |msg|
+        = msg
       .label-field-pair
         .label-container
           = f.label "#{t('name')}"
