--- a/app/views/elective_groups/show.html.haml
+++ b/app/views/elective_groups/show.html.haml
@@ -16,15 +16,17 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("elective_groups/show.css")
+= javascript_include_tag :application
 #content-header
-  = image_tag("  examination/show_exam.png")
+  = image_tag("examination/show_exam.png")
   %h1= t('batches_text')
   %h3= "#{t('show_elective')}"
   #app-back-button
     = back_button
 #inner-tab-menu
   %ul
-    %li= link_to_remote  t('add'), :url => { :controller=>"subjects",:action => 'new', :id => @batch,:id2=>@elective_group}
+    %li= link_to  t('add'), { :controller=>"subjects",:action => 'new', :id => @batch,:id2=>@elective_group}, :remote => true
 #page-yield
   #flash-box
     - unless flash[:notice].nil?
@@ -34,8 +36,8 @@
     = link_to t('course_text'), courses_path
     »
     \#{link_to @course.full_name, @course} »
-    \#{link_to "#{t('batch')} #{@batch.name}", [@course, @batch]} »
-    \#{link_to "#{t('electives')}", batch_elective_groups_path(@batch)} »
+    \#{link_to "#{t('batch')} #{@batch.name}", {:controller => :batches, :action => :show , :course_id => @course.id, :id => @batch.id}} »
+    \#{link_to "#{t('electives')}", {:action => :index, :batch_id => @batch.id}} »
     \#{@elective_group.name}
   .box
     #subjects
