--- a/app/views/subjects/index.html.haml
+++ b/app/views/subjects/index.html.haml
@@ -17,6 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 = javascript_include_tag :application
+= stylesheet_link_tag("subjects/index.css")
 #content-header
   = image_tag("show_settings.png")
   %h1= t('subject')
