--- a/app/views/exam_groups/new.html.haml
+++ b/app/views/exam_groups/new.html.haml
@@ -17,6 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 = javascript_include_tag :application
+= stylesheet_link_tag("exam_groups/new.css")
 = csrf_meta_tag
 #content-header
   = image_tag("examination/show_exam.png")
