--- a/app/views/attendances/index.html.haml
+++ b/app/views/attendances/index.html.haml
@@ -16,7 +16,9 @@
 - #KIND, either express or implied.  See the License for the
 - #specific language governing permissions and limitations
 - #under the License.
+= stylesheet_link_tag("attendances/index.css")
 = javascript_include_tag :application
+= javascript_include_tag :attendance
 - content_for :head do
   - if @config.config_value == 'Daily'
     = javascript_include_tag 'attendance', 'date'
@@ -46,10 +48,12 @@
     %label= t('select_a_batch')
     .text-input-bg
       - if @config.config_value == 'Daily'
-        = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, { :prompt => 'Select a batch0'}, { onchange: "getjson(this.value);"}
+        = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, {:prompt => 'Select a batch'}, {:onChange => "getJson(this.value);"}
       - else
-        = select :batch, :id, @batches.map {|b| [b.full_name, b.id] }, { :prompt => t('select_a_batch')}, 
-        {:onchange => "onChangeRequest(this, '#{url_for(action: :list_subject, batch_id: 'paramid')}'"}
+        = select :batch, :id,                                                                     |
+          @batches.map {|b| [b.full_name, b.id]},                                                      |
+          {:prompt => "#{t('select_a_batch')}"},                                                     |
+          {:onChange => "onChangeRequest(this, '#{url_for(action: :list_subject, batch_id: 'paramid')}')"}
     = image_tag("loader.gif", align: :absmiddle, border: 0, id: :loader, style: "display: none;" )
   = hidden_field_tag 'time_zone_date',@date_today, id: :time_zone
   #subjects
