working on student section

--- a/app/views/students/admission2.html.haml
+++ b/app/views/students/admission2.html.haml
@@ -17,7 +17,7 @@
 - #specific language governing permissions and limitations
 - #under the License.
 #content-header
-  %img{:src => "  admission/admission_page_logo.jpg"}/
+  = image_tag "admission/admission_page_logo.jpg"
   %h1= t('admission')
   %h3= t('parent_guardian_details_step2')
 :javascript
