--- a/app/views/employee/advanced_search.html.haml
+++ b/app/views/employee/advanced_search.html.haml
@@ -17,7 +17,8 @@
 - #specific language governing permissions and limitations
 - #under the License.
 
-= javascript_include_tag 'remote_function'
+= javascript_include_tag 'application'
+= stylesheet_link_tag 'application'
 
 #content-header
   = image_tag("HR/show_hr.png")
@@ -73,7 +74,7 @@
         %label{:for => "student_admission_no"}= t('grade')
         .text-input-bg
           = f.collection_select :employee_grade_id_eq, EmployeeGrade.all, :id, :name,{:prompt=>"#{t('select')}"}
-      .label-field-pair
+      .label-field-pair{style: 'height: 60;'}
         %label{:for => "student_admission_no"}
           = t('joining_date')
           = image_tag("loader.gif",     |
@@ -89,10 +90,10 @@
             / :success => "Element.hide('loader')"                                                                                                                                                |
             / )}"}                                                                                                                                                                                |
           #doj_year
-            = text_field_tag 'adv_search[doj_year]', ''
+            = text_field_tag 'adv_search[doj_year]', '', class: 'datepicker'
             =# select :adv_search,:doj_year,[],{:prompt=>"#{t('select')}"}
           #doj_year_hidden
-      .label-field-pair
+      .label-field-pair{style: 'height: 60;'}
         %label{:for => "student_admission_no"}
           = t('date_of_birth')
           = image_tag("loader.gif",     |
@@ -108,7 +109,7 @@
             / :success => "Element.hide('loader')"                                                                                                                                                |
             / )}"}                                                                                                                                                                                |
           #dob_year
-            = text_field_tag 'adv_search[dob_year]', ''
+            = text_field_tag 'adv_search[dob_year]', '', class: 'datepicker'
             =# select :adv_search,:dob_year,[],{:prompt=>"#{t('select')}"}
           #dob_year_hidden
       .label_field_pair
