--- a/app/views/employee/advanced_search.html.haml
+++ b/app/views/employee/advanced_search.html.haml
@@ -17,9 +17,6 @@
 - #specific language governing permissions and limitations
 - #under the License.
 
-= javascript_include_tag 'application'
-= stylesheet_link_tag 'application'
-
 #content-header
   = image_tag("HR/show_hr.png")
   %h1= t('employee_text')
@@ -82,7 +79,7 @@
             :border => 0,               |
             :id => "loader",            |
             :style =>"display: none;" ) |
-        .text-input-bg
+        .text-input-bg{style: 'width: 350px;'}
           = select :adv_search,:doj_option,[["#{t('equal_to')}","joining_date_eq"],["#{t('less_than')}","joining_date_lt"],["#{t('greater_than')}","joining_date_gt"]],{:prompt=>"#{t('choose_your_option')}"}#, |
             / {:onChange => "#{remote_function(:url => {:action => "list_doj_year"},                                                                                                              |
             / :with=>"'doj_option='+value",                                                                                                                                                       |
@@ -101,7 +98,7 @@
             :border => 0,               |
             :id => "loader",            |
             :style =>"display: none;" ) |
-        .text-input-bg
+        .text-input-bg{style: 'width: 350px;'}
           = select :adv_search,:dob_option,[["#{t('equal_to')}","date_of_birth_eq"],["#{t('less_than')}","date_of_birth_lt"],["#{t('greater_than')}","date_of_birth_gt"]],{:prompt=>"#{t('choose_your_option')}"}#, |
             / {:onChange => "#{remote_function(:url => {:action => "list_dob_year"},                                                                                                              |
             / :with=>"'dob_option='+value",                                                                                                                                                       |
