--- a/app/views/students/advanced_search.haml
+++ b/app/views/students/advanced_search.haml
@@ -17,9 +17,6 @@
 - #specific language governing permissions and limitations
 - #under the License.
 
-= javascript_include_tag 'application'
-= stylesheet_link_tag 'application'
-
 #content-header
   = image_tag("student_details/student_details_logo.jpg")
   %h1= t('student_text')
@@ -80,7 +77,7 @@
           = f.collection_select :nationality_id_eq, Country.all,:id,:name,{:prompt=>"#{t('select')}"}
       .label-field-pair
         %label{:for => "student_grade"}= t('admission_date')
-        .text-input-bg
+        .text-input-bg{style: 'width: 350px;'}
           = select :advv_search,:doa_option,[["#{t('equal_to')}","admission_date_eq"],["#{t('less_than')}","admission_date_lt"],["#{t('greater_than')}","admission_date_gt"]],{:prompt=>"#{t('option')}"}
 
           = image_tag("loader.gif",     |
@@ -94,7 +91,7 @@
           #doa_year_hidden
       .label-field-pair
         %label{:for => "student_birth_date"}= t('birth_date')
-        .text-input-bg
+        .text-input-bg{style: 'width: 350px;'}
           = select :advv_search,:dob_option,[["#{t('equal_to')}","date_of_birth_eq"],["#{t('less_than')}","date_of_birth_lt"],["#{t('greater_than')}","date_of_birth_gt"]],{:prompt=>"#{t('choose_your_option')}"}
           = image_tag("loader.gif",     |
             :align => "absmiddle",      |
@@ -127,7 +124,7 @@
           = link_to "► #{t('view')} #{t('pdf_report')}",   {:action => "advanced_search_pdf", :search=> params[:search],:advv_search=>params[:advv_search],:adv_search=>params[:adv_search]}, :target => '_blank' , :class=> 'user_button'
       .extender
       .searched_for.themed_text
-        = @searched_for
+        = @searched_for.html_safe
       %table#listing{:align => "center", :cellpadding => "1", :cellspacing => "1", :width => "100%"}
         - unless @students.empty?
           %tr.tr-head
