fixed the employee controller chanages.

--- a/app/views/employee/update_rejected_payslip.js.haml
+++ b/app/views/employee/update_rejected_payslip.js.haml
@@ -1,1 +1,4 @@
-$('#rejected_payslip').html("#{escape_javascript render :partial => 'rejected_payslip'}")
+- if params[:salary_date].blank?
+  $('#rejected_payslip').html()
+- else
+  $('#rejected_payslip').html("#{escape_javascript render partial: 'rejected_payslip'}")
